# docker-demo

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: main.py
